--- a/Module1_excercises.ipynb
+++ b/Module1_excercises.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Module1_excercises.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPPfCHEdifrEMSXwkOyflE0",
+      "authorship_tag": "ABX9TyP1tVMbAGErbUAmD8iFJ1vD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -479,8 +479,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "A4EYXc4Rk6-E",
-        "outputId": "f7444dbd-e383-4f14-ee39-93724c3a33ef"
+        "id": "4i-Wxutgn0OE",
+        "outputId": "a61f7dd4-6258-430f-f1db-d8211bb47d8f"
       },
       "execution_count": null,
       "outputs": [
@@ -490,6 +490,107 @@
           "text": [
             "enter a number121\n",
             "palindrome\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# strong number\n",
+        "a=int(input(\"enter a number\"))\n",
+        "b=a\n",
+        "s=0\n",
+        "while a>0:\n",
+        "  d=a%10\n",
+        "  x=1\n",
+        "  for i in range(1,d+1):\n",
+        "    x=x*i\n",
+        "  s=s+x\n",
+        "  a=a//10\n",
+        "if(s==b):\n",
+        "  print(\"strong number\")\n",
+        "else:\n",
+        "  print(\"not strong number\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bgP76lyC2w6b",
+        "outputId": "6ee28c2f-13ff-4766-b3f4-16af838eeb0c"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter a number145\n",
+            "strong number\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# perfect number\n",
+        "a=int(input(\"Enter a number : \"))\n",
+        "s=0\n",
+        "for i in range(1,a):\n",
+        "  if(a%i==0):\n",
+        "    s=s+i\n",
+        "if(s==a):\n",
+        "  print(\"perfect number\")\n",
+        "else:\n",
+        "  print(\"not perfect number\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T3huzyQZ3qLp",
+        "outputId": "e09f81d7-6dcb-43f4-ab67-929db88b51d7"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number : 6\n",
+            "perfect number\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p=int(input(\"Enter a principle amount :\"))\n",
+        "r=int(input(\"Enter rate :\"))\n",
+        "t=int(input(\"Enter time :\"))\n",
+        "c=p*pow(1+r/100,t)-p\n",
+        "print(\"compound intrest :\",c)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "X5MH7NzS4hQM",
+        "outputId": "8030543a-7b21-45b0-95af-dc13cc653475"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a principle amount :12000\n",
+            "Enter rate :5\n",
+            "Enter time :10\n",
+            "compound intrest : 7546.735521329305\n"
           ]
         }
       ]
